--- a/.github/workflows/cmake_publish.yml
+++ b/.github/workflows/cmake_publish.yml
@@ -20,19 +20,19 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Configure CMake
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=${{github.workspace}}/build/bin
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=${{github.workspace}}/build/lib
 
     - name: Build
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
 
     - name: Compress
-      run: 7z a -tzip ${{github.workspace}}/bin/${{github.ref_name}}-${{matrix.os}}.zip ${{github.workspace}}/build/bin/*
+      run: 7z a -tzip ${{github.workspace}}/lib/${{github.ref_name}}-${{matrix.os}}.zip ${{github.workspace}}/build/lib/*
 
     - name: Upload
       uses: actions/upload-artifact@v2
       with:
         name: ${{github.ref_name}}-${{matrix.os}}.zip
-        path: ${{github.workspace}}/bin/${{github.ref_name}}-${{matrix.os}}.zip
+        path: ${{github.workspace}}/lib/${{github.ref_name}}-${{matrix.os}}.zip
 
   publish:
     needs: build
@@ -41,10 +41,10 @@ jobs:
     - name: Download
       uses: actions/download-artifact@v2
       with:
-        path: ${{github.workspace}}/bin
+        path: ${{github.workspace}}/lib
 
     - name: Release
       uses: softprops/action-gh-release@v1
       with:
         fail_on_unmatched_files: true
-        files: ${{github.workspace}}/bin/**/*.zip
+        files: ${{github.workspace}}/lib/**/*.zip
