--- a/test/basic/CMakeLists.txt
+++ b/test/basic/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_test (NAME Empties COMMAND TestRunner empties)
-add_test (NAME Empties2 COMMAND TestRunner empties2)
+add_test (NAME Empties COMMAND MinCTestTestRunner empties)
+add_test (NAME Empties2 COMMAND MinCTestTestRunner empties2)
