scm: Add tests if BUILD_TESTING variable enabled

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,4 +20,6 @@ target_include_directories (${PROJECT_NAME}
     "./include"
 )
 
-add_subdirectory ("./test")
+if (BUILD_TESTING)
+  add_subdirectory ("./test")
+endif (BUILD_TESTING)
